--- a/sample/conf/controllers.ini
+++ b/sample/conf/controllers.ini
@@ -1,15 +1,6 @@
-; Production site configuration data
-[production]
-webhost                  = www.example.com
-database.adapter         = pdo_mysql
-database.params.host     = db.example.com
-database.params.username = dbuser
-database.params.password = secret
-database.params.dbname   = dbname
- 
-; Staging site configuration data inherits from production and
-; overrides values as necessary
-[dev : production]
-database.params.host     = dev.example.com
-database.params.username = devuser
-database.params.password = devsecret
+[Index.Test.index]
+request = 'a:1:{s:2:"id";a:2:{s:4:"type";s:3:"int";s:7:"default";i:0;}}'
+method = 'a:3:{i:0;s:4:"POST";i:1;s:3:"GET";i:2;s:3:"CLI";}';
+sign = 'ohmygod';
+responseFormat = 'a:2:{i:0;s:4:"html";i:1;s:4:"json";}';
+response = 'a:1:{s:4:"hehe";a:2:{s:4:"type";s:3:"int";s:7:"default";i:0;}}'
