--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -3,6 +3,9 @@ server {
     server_name sample.com;
     root /var/www/sample.com;
     index index.php index.html index.htm;
+    if (!-e $request_filename) {
+        rewrite ^/(.*)  /index.php/$1 last;
+    }
     location ~ \.php$ {
         fastcgi_pass  127.0.0.1:9000;
         include fastcgi_params;
