修改环境变量log相关

--- a/tool/build_conf/output/params_dictionary.ini
+++ b/tool/build_conf/output/params_dictionary.ini
@@ -1,18 +1,162 @@
-[title]
-param_chinese_name = '主题';
+[file_path]
+param_chinese_name = '文件路径';
 param_type = 'str';
-length = '300';
+length = '50';
 extra = '';
 remarks = '';
-[content]
-param_chinese_name = '内容';
-param_type = 'str';
-length = '1000';
+[user]
+param_chinese_name = '用户';
+param_type = 'array';
+length = '18';
+extra = 'a:18:{i:0;s:7:"user_id";i:1;s:9:"user_name";i:2;s:13:"user_password";i:3;s:17:"user_password_key";i:4;s:9:"user_type";i:5;s:10:"user_level";i:6;s:11:"user_status";i:7;s:10:"user_coins";i:8;s:13:"user_portrait";i:9;s:11:"user_gender";i:10;s:13:"user_birthday";i:11;s:18:"user_province_code";i:12;s:14:"user_city_code";i:13;s:17:"user_introduction";i:14;s:13:"user_reg_time";i:15;s:11:"user_reg_ip";i:16;s:20:"user_last_visit_time";i:17;s:16:"user_login_times";}';
+remarks = '';
+[user_id]
+param_chinese_name = '用户id';
+param_type = 'int';
+length = '11';
 extra = '';
 remarks = '';
-[result]
-param_chinese_name = '结果';
-param_type = 'bool';
-length = '';
+[user_name]
+param_chinese_name = '用户名称';
+param_type = 'str';
+length = '10';
+extra = '';
+remarks = '';
+[user_password]
+param_chinese_name = '用户密码';
+param_type = 'str';
+length = '32';
+extra = '';
+remarks = '';
+[user_password_key]
+param_chinese_name = '密码密匙';
+param_type = 'str';
+length = '6';
+extra = '';
+remarks = '';
+[user_password_new]
+param_chinese_name = '新用户密码';
+param_type = 'str';
+length = '32';
+extra = '';
+remarks = '用户修改密码时所提交的新密码';
+[user_type]
+param_chinese_name = '用户类型';
+param_type = 'int';
+length = '1';
+extra = '';
+remarks = '';
+[user_level]
+param_chinese_name = '用户等级';
+param_type = 'int';
+length = '10';
+extra = '';
+remarks = '';
+[user_status]
+param_chinese_name = '用户状态';
+param_type = 'int';
+length = '1';
+extra = '';
+remarks = '';
+[user_coins]
+param_chinese_name = '用户钱币（？）';
+param_type = 'int';
+length = '11';
+extra = '';
+remarks = '';
+[user_portrait]
+param_chinese_name = '用户头像';
+param_type = 'str';
+length = '255';
+extra = '';
+remarks = '';
+[user_gender]
+param_chinese_name = '用户性别';
+param_type = 'int';
+length = '1';
+extra = '';
+remarks = '';
+[user_birthday]
+param_chinese_name = '用户生日';
+param_type = 'int';
+length = '11';
+extra = '';
+remarks = '';
+[user_province_code]
+param_chinese_name = '所在省份';
+param_type = 'int';
+length = '10';
+extra = '';
+remarks = '';
+[user_city_code]
+param_chinese_name = '所在市区';
+param_type = 'int';
+length = '10';
+extra = '';
+remarks = '';
+[user_introduction]
+param_chinese_name = '个人介绍';
+param_type = 'str';
+length = '50';
+extra = '';
+remarks = '';
+[user_reg_time]
+param_chinese_name = '注册时间';
+param_type = 'int';
+length = '11';
+extra = '';
+remarks = '';
+[user_reg_ip]
+param_chinese_name = '注册ip地址';
+param_type = 'str';
+length = '15';
+extra = '';
+remarks = '';
+[user_last_visit_time]
+param_chinese_name = '上次访问时间';
+param_type = 'int';
+length = '11';
+extra = '';
+remarks = '';
+[user_login_sum]
+param_chinese_name = '登陆次数';
+param_type = 'int';
+length = '11';
+extra = '';
+remarks = '';
+[notice]
+param_chinese_name = '公告';
+param_type = 'array';
+length = '5';
+extra = 'a:5:{i:0;s:9:"notice_id";i:1;s:12:"notice_title";i:2;s:14:"notice_content";i:3;s:18:"notice_create_time";i:4;s:15:"notice_view_sum";}';
+remarks = '';
+[notice_id]
+param_chinese_name = '公告id';
+param_type = 'int';
+length = '11';
+extra = '';
+remarks = '';
+[notice_title]
+param_chinese_name = '公告名称';
+param_type = 'str';
+length = '50';
+extra = '';
+remarks = '';
+[notice_content]
+param_chinese_name = '公告内容';
+param_type = 'str';
+length = '65560';
+extra = '';
+remarks = '';
+[notice_create_time]
+param_chinese_name = '公告时间';
+param_type = 'int';
+length = '11';
+extra = '';
+remarks = '';
+[notice_view_sum]
+param_chinese_name = '公告次数';
+param_type = 'int';
+length = '11';
 extra = '';
 remarks = '';
