--- a/tool/build_conf/output/ui_config.ini
+++ b/tool/build_conf/output/ui_config.ini
@@ -1,5 +1,60 @@
-[commit.thread.add]
+[user.passport.do_register]
 method = 'POST';
 response_format = 'json';
-request = 'a:2:{i:0;a:4:{s:10:"param_name";s:5:"title";s:11:"is_required";b:1;s:11:"allow_empty";b:0;s:7:"default";N;}i:1;a:4:{s:10:"param_name";s:7:"content";s:11:"is_required";b:1;s:11:"allow_empty";b:1;s:7:"default";N;}}';
-response = 'a:1:{i:0;a:4:{s:10:"param_name";s:6:"result";s:11:"is_required";b:1;s:11:"allow_empty";b:0;s:7:"default";N;}}';
+require_login = '1';
+check_sign = '1';
+request = 'a:7:{i:0;a:4:{s:10:"param_name";s:9:"user_name";s:11:"is_required";b:1;s:11:"allow_empty";b:0;s:7:"default";N;}i:1;a:4:{s:10:"param_name";s:13:"user_password";s:11:"is_required";b:1;s:11:"allow_empty";b:0;s:7:"default";N;}i:2;a:4:{s:10:"param_name";s:11:"user_gender";s:11:"is_required";b:1;s:11:"allow_empty";b:0;s:7:"default";N;}i:3;a:4:{s:10:"param_name";s:13:"user_birthday";s:11:"is_required";b:1;s:11:"allow_empty";b:0;s:7:"default";N;}i:4;a:4:{s:10:"param_name";s:18:"user_province_code";s:11:"is_required";b:1;s:11:"allow_empty";b:0;s:7:"default";N;}i:5;a:4:{s:10:"param_name";s:14:"user_city_code";s:11:"is_required";b:1;s:11:"allow_empty";b:0;s:7:"default";N;}i:6;a:4:{s:10:"param_name";s:17:"user_introduction";s:11:"is_required";b:1;s:11:"allow_empty";b:1;s:7:"default";N;}}';
+[user.passport.register]
+method = 'GET';
+response_format = 'html';
+require_login = '';
+check_sign = '';
+[user.passport.do_login]
+method = 'POST';
+response_format = 'json';
+require_login = '';
+check_sign = '1';
+request = 'a:2:{i:0;a:4:{s:10:"param_name";s:9:"user_name";s:11:"is_required";b:1;s:11:"allow_empty";b:0;s:7:"default";N;}i:1;a:4:{s:10:"param_name";s:13:"user_password";s:11:"is_required";b:1;s:11:"allow_empty";b:0;s:7:"default";N;}}';
+[user.passport.login]
+method = 'GET';
+response_format = 'html';
+require_login = '';
+check_sign = '';
+[user.passport.userinfo]
+method = 'GET';
+response_format = 'html';
+require_login = '';
+check_sign = '';
+request = 'a:1:{i:0;a:4:{s:10:"param_name";s:7:"user_id";s:11:"is_required";b:0;s:11:"allow_empty";b:1;s:7:"default";N;}}';
+response = 'a:1:{i:0;a:4:{s:10:"param_name";s:4:"user";s:11:"is_required";b:0;s:11:"allow_empty";b:0;s:7:"default";N;}}';
+[user.passport.update_userinfo]
+method = 'POST';
+response_format = 'json';
+require_login = '1';
+check_sign = '1';
+request = 'a:5:{i:0;a:4:{s:10:"param_name";s:11:"user_gender";s:11:"is_required";b:0;s:11:"allow_empty";b:0;s:7:"default";N;}i:1;a:4:{s:10:"param_name";s:13:"user_birthday";s:11:"is_required";b:0;s:11:"allow_empty";b:0;s:7:"default";N;}i:2;a:4:{s:10:"param_name";s:18:"user_province_code";s:11:"is_required";b:0;s:11:"allow_empty";b:0;s:7:"default";N;}i:3;a:4:{s:10:"param_name";s:14:"user_city_code";s:11:"is_required";b:0;s:11:"allow_empty";b:0;s:7:"default";N;}i:4;a:4:{s:10:"param_name";s:17:"user_introduction";s:11:"is_required";b:0;s:11:"allow_empty";b:0;s:7:"default";N;}}';
+[user.passport.portrait]
+method = 'GET';
+response_format = 'html';
+require_login = '';
+check_sign = '';
+response = 'a:1:{i:0;a:4:{s:10:"param_name";s:4:"user";s:11:"is_required";b:1;s:11:"allow_empty";b:0;s:7:"default";N;}}';
+[user.passport.update_portrait]
+method = 'POST';
+response_format = 'json';
+require_login = '1';
+check_sign = '1';
+request = 'a:1:{i:0;a:4:{s:10:"param_name";s:7:"user_id";s:11:"is_required";b:1;s:11:"allow_empty";b:0;s:7:"default";N;}}';
+file = 'a:1:{i:0;a:4:{s:10:"param_name";s:8:"filepath";s:11:"is_required";b:1;s:11:"allow_empty";b:0;s:7:"default";N;}}';
+[user.passport.password]
+method = 'GET';
+response_format = 'html';
+require_login = '';
+check_sign = '';
+response = 'a:1:{i:0;a:4:{s:10:"param_name";s:4:"user";s:11:"is_required";b:0;s:11:"allow_empty";b:0;s:7:"default";N;}}';
+[user.passport.update_password]
+method = 'POST';
+response_format = 'json';
+require_login = '1';
+check_sign = '1';
+request = 'a:3:{i:0;a:4:{s:10:"param_name";s:7:"user_id";s:11:"is_required";b:1;s:11:"allow_empty";b:0;s:7:"default";N;}i:1;a:4:{s:10:"param_name";s:13:"user_password";s:11:"is_required";b:1;s:11:"allow_empty";b:0;s:7:"default";N;}i:2;a:4:{s:10:"param_name";s:17:"user_password_new";s:11:"is_required";b:1;s:11:"allow_empty";b:0;s:7:"default";N;}}';
