--- a/build.xml
+++ b/build.xml
@@ -96,6 +96,7 @@ description="Find coding standard violations using PHP_CodeSniffer and print hum
 <target name="phpcs-ci" description="Find coding standard violations using PHP_CodeSniffer creating a log file for the continuous integration server">
 <exec executable="phpcs" output="/dev/null">
 <arg value="--report=checkstyle" />
+<arg value="--standard=Zend" />
 <arg value="--report-file=${basedir}/build/logs/checkstyle.xml" />
 <arg path="${basedir}/src" />
 </exec>
