--- a/src/Error/error.ini
+++ b/src/Error/error.ini
@@ -1,9 +1,5 @@
-[common]
-error.0.message = success
-error.0.prompt = 成功
-error.1.message = internal error
-error.1.prompt = 内部错误
+error.code0.message = success
+error.code0.prompt = 成功
+error.code1.message = internal error
+error.code1.prompt = 内部错误
 error.default.no = 1
-[product : common]
-[test: common]
-[dev: common]
