--- a/src/Error/error.ini
+++ b/src/Error/error.ini
@@ -1,5 +1,7 @@
-error.code0.message = success
-error.code0.prompt = 成功
-error.code1.message = internal error
-error.code1.prompt = 内部错误
-error.default.no = 1
+default = success
+success.code = 0
+success.message = success
+success.prompt = 成功
+internal_error.code = 1
+internal_error.message = internal error
+internal_error.prompt = 内部错误
